--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,8 @@
 @import "./base/common";
 @import "./components/animations";
 @import "./utils/variables";
+@import "./utils/placeholders";
+@import "./utils/mixins";
 @import "./components/header";
 @import "./main-page/sections/hero";
 @import "./main-page/sections/info";
