--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -1,6 +1,8 @@
 @import "./base/common";
 @import "./base/reset";
 @import "./utils/variables";
+@import "./utils/placeholders";
+@import "./utils/mixins";
 @import "./components/animations";
 @import "./components/header";
 @import "./portfolio-page/sections/hero";
