--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -84,6 +84,12 @@ input {
   outline: none;
 }
 
+.basement__title, .footer__logo2, .footer__logo1, .hero__title, .header__logo2, .header__logo1 {
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.02em;
+}
+
 @keyframes from-up {
   0% {
     transform: translateY(-300px);
@@ -129,7 +135,9 @@ input {
 }
 .header__container {
   display: flex;
+  justify-content: center;
   align-items: center;
+  gap: 0px;
 }
 .header__logo {
   display: block;
@@ -143,23 +151,19 @@ input {
   color: #2196f3;
   font-family: Raleway;
   font-size: 26px;
-  line-height: normal;
-  font-weight: 700;
-  letter-spacing: 0.03em;
 }
 .header__logo2 {
   color: #000;
   font-family: Raleway;
   font-size: 26px;
-  line-height: normal;
-  font-weight: 700;
-  letter-spacing: 0.03em;
 }
 .header__list {
-  display: flex;
-  gap: 50px;
   margin-right: 344px;
   margin-left: auto;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 50px;
 }
 .header__item:hover .header__link::after {
   opacity: 1;
@@ -208,11 +212,15 @@ input {
 }
 .header__autorisations {
   display: flex;
+  justify-content: center;
+  align-items: flex-start;
   gap: 50px;
 }
 .header__item2 {
   display: flex;
+  justify-content: center;
   align-items: center;
+  gap: 0px;
   color: #757575;
   font-weight: 500;
   letter-spacing: 0.02em;
@@ -236,7 +244,9 @@ input {
   letter-spacing: 0.02em;
   text-decoration: none;
   display: flex;
+  justify-content: center;
   align-items: center;
+  gap: 0px;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-property: color;
   transition-duration: 250ms;
@@ -285,10 +295,11 @@ input {
   padding-bottom: 94px;
 }
 .hero__list {
+  margin-bottom: 50px;
   display: flex;
   justify-content: center;
+  align-items: flex-start;
   gap: 8px;
-  margin-bottom: 50px;
 }
 .hero__item {
   animation-duration: 1s;
@@ -320,7 +331,9 @@ input {
 }
 .hero__posters {
   display: flex;
+  justify-content: center;
   align-items: center;
+  gap: 0px;
   flex-wrap: wrap;
   -moz-column-gap: 30px;
        column-gap: 30px;
@@ -401,9 +414,7 @@ input {
 .hero__title {
   color: #212121;
   font-size: 18px;
-  font-weight: 700;
   line-height: 2;
-  letter-spacing: 0.06em;
   margin-top: 20px;
   margin-bottom: 4px;
   padding-left: 24px;
@@ -431,10 +442,12 @@ input {
 }
 .footer__container {
   flex-direction: row;
-  justify-content: start;
   align-content: normal;
   row-gap: 20px;
   display: flex;
+  justify-content: start;
+  align-items: flex-start;
+  gap: 0px;
 }
 .footer__logo {
   display: block;
@@ -450,9 +463,6 @@ input {
   color: #2196f3;
   font-size: 26px;
   font-family: Raleway;
-  line-height: normal;
-  font-weight: 700;
-  letter-spacing: 0.03em;
   margin-bottom: 20px;
   word-wrap: break-word;
 }
@@ -460,9 +470,6 @@ input {
   color: #ffffff;
   font-size: 26px;
   font-family: Raleway;
-  line-height: normal;
-  font-weight: 700;
-  letter-spacing: 0.03em;
   margin-bottom: 20px;
 }
 .footer__address {
@@ -515,8 +522,9 @@ input {
 }
 .footer__least {
   display: flex;
-  -moz-column-gap: 10px;
-       column-gap: 10px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 10px;
 }
 .footer__contacts {
   width: 44px;
@@ -548,15 +556,15 @@ input {
   color: #ffffff;
   font-size: 14px;
   font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  letter-spacing: 0.42px;
   text-transform: uppercase;
   margin-bottom: 20px;
   font-family: Roboto;
 }
 .basement__container {
   display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 0px;
 }
 .basement__input {
   width: 358px;
@@ -607,6 +615,7 @@ input {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 0px;
 }
 .basement__icon {
   width: 24px;
