--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -8,8 +8,7 @@
   border: $border-linia 1px solid;
 
   &__container {
-    display: flex;
-    align-items: center;
+    @include flexbox($center-y: center);
   }
 
   &__logo {
@@ -26,25 +25,20 @@
     color: $hover-color;
     font-family: Raleway;
     font-size: 26px;
-    line-height: normal;
-    font-weight: 700;
-    letter-spacing: 0.03em;
+    @extend %title-styles;
   }
 
   &__logo2 {
     color: $logo-text-color;
     font-family: Raleway;
     font-size: 26px;
-    line-height: normal;
-    font-weight: 700;
-    letter-spacing: 0.03em;
+    @extend %title-styles;
   }
 
   &__list {
-    display: flex;
-    gap: 50px;
     margin-right: 344px;
     margin-left: auto;
+    @include flexbox($gap: 50px);
   }
 
   &__item:hover &__link::after {
@@ -98,13 +92,11 @@
   }
 
   &__autorisations {
-    display: flex;
-    gap: 50px;
+    @include flexbox($gap: 50px);
   }
 
   &__item2 {
-    display: flex;
-    align-items: center;
+    @include flexbox($center-y: center);
     color: $additional-text-color;
     font-weight: 500;
     letter-spacing: 0.02em;
@@ -130,8 +122,7 @@
     line-height: normal;
     letter-spacing: 0.02em;
     text-decoration: none;
-    display: flex;
-    align-items: center;
+    @include flexbox($center-y: center);
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-property: color;
     transition-duration: 250ms;
