--- a/sass/main-page/sections/_modal.scss
+++ b/sass/main-page/sections/_modal.scss
@@ -29,9 +29,8 @@
   padding: 40px;
 
   &__form {
-    display: flex;
     flex-direction: column;
-    align-items: center;
+    @include flexbox($center-y: center)
   }
 
   &__btnclose {
@@ -43,9 +42,7 @@
     border: solid 1px;
     border-radius: 50%;
     color: $accent-color;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include flexbox($center-y: center, $position-x: center);
     cursor: pointer;
     stroke: rgba(0, 0, 0, 0.1);
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -70,25 +67,21 @@
     color: $text-color;
     text-align: center;
     font-size: 20px;
-    font-weight: 700;
-    line-height: normal;
     line-height: 23.44px;
-    letter-spacing: 0.03em;
     margin-bottom: 12px;
     font-family: Roboto;
+    @extend %title-styles;
   }
 
   &__list {
-    display: flex;
     flex-direction: column;
-    gap: 10px;
-    align-items: center;
+    @include flexbox($gap: 10px, $center-y: center);
   }
 
   &__item {
-    display: flex;
     flex-direction: column;
     position: relative;
+    @include flexbox();
   }
 
   &__item:hover &__icon,
@@ -162,9 +155,8 @@
   &__agrees {
     margin-top: 20px;
     margin-bottom: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flexbox($position-x: center, $center-y: center);
+
   }
 
   &__agrinput {
