--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -43,10 +43,8 @@
 
   &__address {
     color: $accent-color;
-    font-size: 14px;
-    font-weight: 400;
+    @extend %text-styles;
     line-height: 1.71;
-    letter-spacing: 0.42px;
     word-wrap: break-word;
     font-style: normal;
     margin-bottom: 9px;
@@ -56,10 +54,8 @@
 
   &__email {
     color: $additional-text-color;
-    font-size: 14px;
-    font-weight: 400;
+    @extend %text-styles;
     line-height: 1.7;
-    letter-spacing: 0.03em;
     display: block;
     margin-bottom: 9px;
     text-decoration: none;
@@ -69,10 +65,8 @@
 
   &__phone {
     color: $additional-text-color;
-    font-size: 14px;
-    font-weight: 400;
+    @extend %text-styles;
     line-height: 1.7;
-    letter-spacing: 0.03em;
     text-decoration: none;
     color: rgba(255, 255, 255, 0.6);
     font-family: Roboto;
@@ -175,11 +169,8 @@
     background-color: #2196f3;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     color: #fff;
-    text-align: left;
-    font-family: Roboto;
-    font-size: 16px;
+    @extend %button-styles;
     font-style: normal;
-    font-weight: 700;
     line-height: 30px;
     letter-spacing: 0.96px;
     padding: 10px 28px 10px 28px;
