--- a/sass/main-page/sections/_info.scss
+++ b/sass/main-page/sections/_info.scss
@@ -69,11 +69,9 @@
 
   &__text {
     color: $additional-text-color;
-    font-size: 14px;
-    font-weight: 400;
     line-height: 1.7;
-    letter-spacing: 0.03em;
     font-family: Roboto;
+    @extend %text-styles;
   }
 }
 
