--- a/sass/main-page/sections/_modal.scss
+++ b/sass/main-page/sections/_modal.scss
@@ -166,11 +166,9 @@
 
   &__agrlabel {
     color: $additional-text-color;
-    font-size: 14px;
+    @extend %text-styles;
     font-style: normal;
-    font-weight: 400;
     line-height: 24px;
-    letter-spacing: 0.42px;
     margin-left: 7px;
     margin-right: 5px;
     font-family: Roboto;
@@ -178,11 +176,9 @@
 
   &__agrlink {
     color: $hover-color;
-    font-size: 14px;
+    @extend %text-styles;
     font-style: normal;
-    font-weight: 400;
     line-height: 24px;
-    letter-spacing: 0.42px;
     text-decoration-line: underline;
     font-family: Roboto;
   }
@@ -194,12 +190,9 @@
     background-color: $hover-color;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     color: #fff;
-    text-align: center;
-    font-size: 16px;
     font-style: normal;
-    font-weight: 700;
     line-height: 30px;
     letter-spacing: 0.96px;
-    font-family: Roboto;
+    @extend %button-styles;
   }
 }
