--- a/sass/main-page/sections/_work.scss
+++ b/sass/main-page/sections/_work.scss
@@ -46,7 +46,7 @@
     font-size: 14px;
     font-weight: 700;
     line-height: 16.41px;
-    letter-spacing: 0.03px;
+    letter-spacing: 0.03em;
     width: 370px;
     padding: 27px 0px;
     background-color: rgba(47, 48, 58, 0.8);
