--- a/sass/main-page/sections/_hero.scss
+++ b/sass/main-page/sections/_hero.scss
@@ -6,8 +6,21 @@
     url(../img/working.webp);
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 200px;
-  padding-top: 200px;
+
+  @media screen and (min-width: 480px) {
+    padding-bottom: 118px;
+    padding-top: 118px;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding-bottom: 118px;
+    padding-top: 118px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 200px;
+    padding-top: 200px;
+  }
 
   &__container {
     flex-direction: column;
@@ -17,16 +30,33 @@
   &__title {
     color: $accent-color;
     text-align: center;
-    font-size: 44px;
     font-weight: 900;
-    line-height: 1.3;
-    letter-spacing: 0.04em;
     text-transform: uppercase;
     margin-bottom: 30px;
-    width: 696px;
     font-family: Roboto;
     animation-name: from-left;
     animation-duration: 1s;
+
+    @media screen and (min-width: 480px) {
+      font-size: 26px;
+      line-height: 1.61em;
+      letter-spacing: 1.56px;
+      width: 360px; 
+    }
+
+    @media screen and (min-width: 768px) {
+      font-size: 26px;
+      line-height: 1.61em;
+      letter-spacing: 1.56px;
+      width: 360px; 
+    }
+
+    @media screen and (min-width: 1200px) {
+      font-size: 44px;
+      line-height: 1.3em;
+      letter-spacing: 0.02;
+      width: 696px;
+    }
   }
 
   &__button {
@@ -34,17 +64,31 @@
     @extend %button-styles;
     line-height: 1.87;
     letter-spacing: 0.02em;
-    width: 216px;
     height: 50px;
     flex-shrink: 0;
     border-radius: 4px;
     background-color: $hover-color;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     cursor: pointer;
-    padding: 10px 32px 10px 32px;
     border: none;
     animation-duration: from-right;
     animation-duration: 1s;
-  }
-}
 
+    @media screen and (min-width: 480px) {
+      width: 200px;
+      padding: 10px 24px 10px 24px; 
+    }
+  
+    @media screen and (min-width: 768px) {
+      width: 200px;
+      padding: 10px 24px 10px 24px; 
+    }
+  
+    @media screen and (min-width: 1200px) {
+      width: 216px; 
+      padding: 10px 32px 10px 32px;
+    }
+  }
+
+
+}
