--- a/sass/main-page/sections/_info.scss
+++ b/sass/main-page/sections/_info.scss
@@ -1,5 +1,19 @@
 .info {
-  padding-top: 94px;
+
+  @media screen and (min-width: 480px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 
   &__container {
     @include flexbox($center-y: center, $position-x: space-between);
@@ -7,18 +21,45 @@
 
   &__list {
     @include flexbox($gap: 30px);
+    padding: 0px 15px 0px 15px;
+
+    @media screen and (min-width: 480px) {
+      flex-wrap: wrap;
+    }
+
+    @media screen and (min-width: 768px) {
+      flex-wrap: wrap;
+    }
+
+    @media screen and (min-width: 1200px) {
+      flex-wrap: nowrap;
+    }
   }
 
   &__item {
-
     &::before {
       display: block;
       border-radius: 4px;
       background: $background-color-ourteam;
-      padding: 25px 100px 25px 100px;
-      width: 270px;
-      height: 120px;
       margin-bottom: 30px;
+
+      @media screen and (min-width: 480px) {
+        width: 450px;
+        height: 120px;
+        padding: 25px 190px 25px 190px;
+      }
+
+      @media screen and (min-width: 768px) {
+        width: 354px;
+        height: 120px;
+        padding: 25px 142px 25px 142px;
+      }
+
+      @media screen and (min-width: 1200px) {
+        width: 270px;
+        height: 120px;
+        padding: 25px 100px 25px 100px;
+      }
     }
 
     &:first-child::before {
@@ -65,6 +106,18 @@
     @extend %title-styles;
     text-transform: uppercase;
     margin-bottom: 10px;
+
+    @media screen and (min-width: 480px) {
+      text-align: center;
+    }
+
+    @media screen and (min-width: 768px) {
+      text-align: left;
+    }
+
+    @media screen and (min-width: 1200px) {
+      text-align: none;
+    }
   }
 
   &__text {
@@ -72,9 +125,20 @@
     line-height: 1.7;
     font-family: Roboto;
     @extend %text-styles;
+
+    @media screen and (min-width: 480px) {
+      width: 450px;
+      height: 50px;
+    }
+
+    @media screen and (min-width: 768px) {
+      width: 354px;
+      height: 48px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 270px;
+      height: 72px;
+    }
   }
 }
-
-
-
-
